Adição de matrícula no cabeçalho do trabalho

--- a/Questao1.ipynb
+++ b/Questao1.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Trabalho de Estruturas Discretas\n",
-    "## Gabriel Barbosa - 1511211 e Lucas Rodrigues -\n",
+    "## Gabriel Barbosa - 1511211 e Lucas Rodrigues - 1510848\n",
     "### Primeira Questão - Obter o coeficiente, baseado na prova do enunciado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
