--- a/src/[INF1631]Primeiro Trabalho - Estruturas Discretas.ipynb
+++ b/src/[INF1631]Primeiro Trabalho - Estruturas Discretas.ipynb
@@ -511,12 +511,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 1 0]\n",
+      " [1 0 1 1]\n",
+      " [1 1 0 1]\n",
+      " [0 1 1 0]]\n",
+      "\n",
+      "É denso!\n",
+      "<class 'list'>\n",
+      "Houve erro!\n",
+      "Erro na ida!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import sys\n",
+    "import math\n",
+    "import random\n",
+    "\n",
+    "#Função de Criação de Greafos Implementada pelo professor Poggi\n",
+    "\n",
+    "def generate_graph(n, dens):\n",
+    "    global Madj, Dist, d_infinity\n",
+    "    global Nvertices, Marcs\n",
+    "    global ArcList_I, ArcList_J\n",
+    "    \n",
+    "    random.seed(1)\n",
+    "    Madj = []\n",
+    "    Dist = []\n",
+    "    ArcList_I = []    \n",
+    "    ArcList_J = []\n",
+    "    Nvertices = n\n",
+    "    Marcs = 0\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        Madj.append([0 for x  in range(n)])\n",
+    "        Dist.append([0 for x  in range(n)])\n",
+    "        \n",
+    "    d_infinity = 0\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            u = random.random()\n",
+    "            if (u < dens):\n",
+    "                Marcs += 1\n",
+    "                ArcList_I.append(i)\n",
+    "                ArcList_J.append(j)\n",
+    "                Madj[i][j] = 1\n",
+    "                Dist[i][j] = random.randint(1,1000)\n",
+    "                d_infinity += Dist[i][j]\n",
+    "            else:\n",
+    "                Madj[i][j] = 0\n",
+    "    \n",
+    "    d_infinity += 1\n",
+    "    \n",
+    "    print (Madj)\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if (Madj[i][j] == 0):\n",
+    "                Dist[i][j] = d_infinity\n",
+    "\n",
+    "# FUNCAO DENSE\n",
+    "#\n",
+    "# Essa função checa se o grafo é denso ou não.\n",
+    "# Parametros: M = matriz de ajascencias\n",
+    "# Retorno: -1 = Não é denso; 0 = É denso\n",
+    "\n",
+    "def dense(M):\n",
+    "    verts = Nvertices\n",
+    "    cards = np.zeros(verts)\n",
+    "    for i in range(verts):\n",
+    "        for j in range(verts):\n",
+    "            if (M[i][j] == 1):\n",
+    "                cards[i] = cards[i] + 1\n",
+    "    for i in range(verts):\n",
+    "        for j in range(verts):\n",
+    "            if(i != j and cards[i] + cards[j] < verts):\n",
+    "                return -1\n",
+    "    return 0\n",
+    "    \n",
+    "# FUNCAO CICLO HAMILTON\n",
+    "#\n",
+    "# Essa função acha o menor ciclo hamiltoniano entre dois vertices\n",
+    "# Parametro: M = Matriz de Adjacências\n",
+    "# Retorno: Ciclo = Vetor de arestas que compõem o ciclo\n",
+    "                \n",
+    "def path(M, v1, v2, cicle):\n",
+    "    n = len(M[0])\n",
+    "    cicle.append(v1)\n",
+    "    if(v1 == v2):\n",
+    "        return cicle\n",
+    "    if(v1 not in range(n)):\n",
+    "        return -1\n",
+    "    for i in M[v1]:\n",
+    "        if i not in cicle:\n",
+    "            newcicle = cicloHamilton(M, i, v2, cicle)\n",
+    "            if newcicle:\n",
+    "                return newcicle\n",
+    "    print(\"Houve erro!\")\n",
+    "    return -1\n",
+    "    \n",
+    "def cicloH(M):\n",
+    "    n = len(M[0])\n",
+    "    if(n < 3 or dense(M) == -1):\n",
+    "        print(\"O grafo não se aplica ao teorema!\")\n",
+    "        return -1\n",
+    "    path1 = path(M,0,3,[])\n",
+    "    if(path1 == -1):\n",
+    "        print(\"Erro na ida!\")\n",
+    "        return -1\n",
+    "    print(path1)\n",
+    "    novoM = M\n",
+    "    for i in range(len(path1)-1):\n",
+    "        M[path1[i]][path1[i+1]] = 0\n",
+    "        M[path1[i+1]][path1[i]] = 0\n",
+    "    path2 = path(M,3,0,[])\n",
+    "    if(path2 == -1):\n",
+    "        print(\"Erro na volta!\")\n",
+    "        return -1\n",
+    "    print(path2)\n",
+    "    return path1.append(path2)\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "\n",
+    "def fullvisit(visited, n):\n",
+    "    for i in range(len(visited)):\n",
+    "        flag = 0\n",
+    "        for j in range(n):\n",
+    "            if (visited[i] == j):\n",
+    "                flag = 1\n",
+    "        if (flag != 1):\n",
+    "            return 0  # Esse é o caso sem visita completa\n",
+    "    return 1  # Esse é o caso com visita completa\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "                \n",
+    "\n",
+    "M = np.array([[0,1,1,0],[1,0,1,1],[1,1,0,1],[0,1,1,0]])\n",
+    "print(M)\n",
+    "\n",
+    "if(dense(M) == -1):\n",
+    "    print(\"\\nNão é denso!\")\n",
+    "else:\n",
+    "    print(\"\\nÉ denso!\")\n",
+    "    \n",
+    "ciclo = path(M, 0, 1, [])\n",
+    "print(type(ciclo))\n",
+    "\n",
+    "ciclo = cicloH(M)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -763,7 +919,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
