--- a/src/[INF1631]Primeiro Trabalho - Estruturas Discretas.ipynb
+++ b/src/[INF1631]Primeiro Trabalho - Estruturas Discretas.ipynb
@@ -511,24 +511,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Geração de Resultados pode demorar um pouco...\n",
+      "\n",
+      "Primeiro Exemplo\n",
+      "\n",
       "[[0 1 1 0]\n",
       " [1 0 1 1]\n",
       " [1 1 0 1]\n",
       " [0 1 1 0]]\n",
       "\n",
-      "É denso!\n",
-      "<class 'list'>\n",
-      "Houve erro!\n",
-      "Erro na ida!\n"
+      "Tempo: 6.556604081357364\n",
+      "\n",
+      "Ciclo Hamilton: [0, 2, 3, 1, 0]\n",
+      "\n",
+      "Segundo Exemplo:\n",
+      "\n",
+      "[[0 1 1 1]\n",
+      " [1 0 1 1]\n",
+      " [1 1 0 1]\n",
+      " [1 1 1 0]]\n",
+      "\n",
+      "Tempo: 6.815225674773501\n",
+      "\n",
+      "Ciclo Hamilton: [0, 3, 2, 1, 0]\n",
+      "\n",
+      "Terceiro Exemplo:\n",
+      "\n",
+      "[[0 1 1]\n",
+      " [1 0 1]\n",
+      " [1 1 0]]\n",
+      "\n",
+      "Tempo: 9.464697112933209\n",
+      "\n",
+      "Ciclo Hamilton: [0, 2, 1, 0]\n",
+      "\n",
+      "Quarto Exemplo:\n",
+      "\n",
+      "[[0 1 1 1]\n",
+      " [1 0 1 0]\n",
+      " [1 1 0 1]\n",
+      " [1 0 1 0]]\n",
+      "\n",
+      "Tempo: 11.525693138318275\n",
+      "\n",
+      "Ciclo Hamilton: [0, 3, 2, 1, 0]\n",
+      "\n",
+      "Tempos: [6.556604081357364, 6.815225674773501, 9.464697112933209, 11.525693138318275]\n"
      ]
     }
    ],
@@ -537,48 +576,8 @@
     "import sys\n",
     "import math\n",
     "import random\n",
-    "\n",
-    "#Função de Criação de Greafos Implementada pelo professor Poggi\n",
-    "\n",
-    "def generate_graph(n, dens):\n",
-    "    global Madj, Dist, d_infinity\n",
-    "    global Nvertices, Marcs\n",
-    "    global ArcList_I, ArcList_J\n",
-    "    \n",
-    "    random.seed(1)\n",
-    "    Madj = []\n",
-    "    Dist = []\n",
-    "    ArcList_I = []    \n",
-    "    ArcList_J = []\n",
-    "    Nvertices = n\n",
-    "    Marcs = 0\n",
-    "    \n",
-    "    for i in range(n):\n",
-    "        Madj.append([0 for x  in range(n)])\n",
-    "        Dist.append([0 for x  in range(n)])\n",
-    "        \n",
-    "    d_infinity = 0\n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            u = random.random()\n",
-    "            if (u < dens):\n",
-    "                Marcs += 1\n",
-    "                ArcList_I.append(i)\n",
-    "                ArcList_J.append(j)\n",
-    "                Madj[i][j] = 1\n",
-    "                Dist[i][j] = random.randint(1,1000)\n",
-    "                d_infinity += Dist[i][j]\n",
-    "            else:\n",
-    "                Madj[i][j] = 0\n",
-    "    \n",
-    "    d_infinity += 1\n",
-    "    \n",
-    "    print (Madj)\n",
-    "    \n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            if (Madj[i][j] == 0):\n",
-    "                Dist[i][j] = d_infinity\n",
+    "import matplotlib.pyplot as plt\n",
+    "from CPUtimer import *\n",
     "\n",
     "# FUNCAO DENSE\n",
     "#\n",
@@ -587,7 +586,7 @@
     "# Retorno: -1 = Não é denso; 0 = É denso\n",
     "\n",
     "def dense(M):\n",
-    "    verts = Nvertices\n",
+    "    verts = len(M)\n",
     "    cards = np.zeros(verts)\n",
     "    for i in range(verts):\n",
     "        for j in range(verts):\n",
@@ -605,72 +604,126 @@
     "# Parametro: M = Matriz de Adjacências\n",
     "# Retorno: Ciclo = Vetor de arestas que compõem o ciclo\n",
     "                \n",
-    "def path(M, v1, v2, cicle):\n",
+    "def Path(M, v1, v2, cicle):\n",
     "    n = len(M[0])\n",
-    "    cicle.append(v1)\n",
+    "    cicle = cicle + [v1]\n",
     "    if(v1 == v2):\n",
     "        return cicle\n",
     "    if(v1 not in range(n)):\n",
-    "        return -1\n",
-    "    for i in M[v1]:\n",
-    "        if i not in cicle:\n",
-    "            newcicle = cicloHamilton(M, i, v2, cicle)\n",
-    "            if newcicle:\n",
-    "                return newcicle\n",
-    "    print(\"Houve erro!\")\n",
-    "    return -1\n",
+    "        return []\n",
+    "    shortest = []\n",
+    "    for i in range(n):\n",
+    "        if(M[v1][i] == 1):\n",
+    "            v = i\n",
+    "            if v not in cicle:\n",
+    "                newpath = Path(M, v, v2, cicle)\n",
+    "                if (newpath and (newpath != shortest or len(newpath) > len(shortest))):\n",
+    "                    shortest = newpath\n",
+    "    return shortest\n",
+    "\n",
+    "def firstAdjascent(index,M):\n",
+    "    n = len(M[0])\n",
+    "    for i in range(n):\n",
+    "        if(M[index][i] == 1):\n",
+    "            return i\n",
     "    \n",
     "def cicloH(M):\n",
     "    n = len(M[0])\n",
     "    if(n < 3 or dense(M) == -1):\n",
     "        print(\"O grafo não se aplica ao teorema!\")\n",
     "        return -1\n",
-    "    path1 = path(M,0,3,[])\n",
+    "    index = firstAdjascent(0, M)\n",
+    "    path1 = Path(M, 0, index, [])\n",
     "    if(path1 == -1):\n",
     "        print(\"Erro na ida!\")\n",
     "        return -1\n",
-    "    print(path1)\n",
-    "    novoM = M\n",
-    "    for i in range(len(path1)-1):\n",
-    "        M[path1[i]][path1[i+1]] = 0\n",
-    "        M[path1[i+1]][path1[i]] = 0\n",
-    "    path2 = path(M,3,0,[])\n",
+    "    #print(path1)\n",
+    "    newM = np.copy(M)\n",
+    "    newM = removePath(newM, path1)\n",
+    "    path2 = Path(newM, index, 0, [])\n",
     "    if(path2 == -1):\n",
     "        print(\"Erro na volta!\")\n",
     "        return -1\n",
-    "    print(path2)\n",
-    "    return path1.append(path2)\n",
+    "    #print(path2)\n",
+    "    del(path2[0])\n",
+    "    return path1 + path2\n",
+    "        \n",
+    "        \n",
+    "def removePath(M, path):\n",
+    "    newM = M\n",
+    "    for i in range(len(path)-1):\n",
+    "        newM[path[i]][path[i+1]] = 0\n",
+    "        newM[path[i+1]][path[i]] = 0\n",
+    "    return newM\n",
     "        \n",
     "        \n",
     "    \n",
+    "timer = CPUTimer(0)\n",
+    "timestamps = []\n",
     "\n",
-    "def fullvisit(visited, n):\n",
-    "    for i in range(len(visited)):\n",
-    "        flag = 0\n",
-    "        for j in range(n):\n",
-    "            if (visited[i] == j):\n",
-    "                flag = 1\n",
-    "        if (flag != 1):\n",
-    "            return 0  # Esse é o caso sem visita completa\n",
-    "    return 1  # Esse é o caso com visita completa\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "                \n",
+    "print(\"\\nGeração de Resultados pode demorar um pouco...\")\n",
+    "\n",
     "\n",
     "M = np.array([[0,1,1,0],[1,0,1,1],[1,1,0,1],[0,1,1,0]])\n",
+    "print(\"\\nPrimeiro Exemplo\\n\")\n",
     "print(M)\n",
     "\n",
-    "if(dense(M) == -1):\n",
-    "    print(\"\\nNão é denso!\")\n",
-    "else:\n",
-    "    print(\"\\nÉ denso!\")\n",
-    "    \n",
-    "ciclo = path(M, 0, 1, [])\n",
-    "print(type(ciclo))\n",
+    "timer.start()\n",
+    "for i in range(100000):\n",
+    "    ciclo = cicloH(M)\n",
+    "timer.stop()\n",
+    "time = timer.get_time(reference = \"total\", unit = \"seconds\")\n",
+    "timer.lap(start_stopped = \"false\")\n",
+    "timestamps = timestamps + [time]\n",
+    "print(\"\\nTempo: \" + str(time))\n",
+    "print(\"\\nCiclo Hamilton: \" + str(ciclo))\n",
     "\n",
-    "ciclo = cicloH(M)\n",
+    "Mi = np.array([[0,1,1,1],[1,0,1,1],[1,1,0,1],[1,1,1,0]])\n",
+    "print(\"\\nSegundo Exemplo:\\n\")\n",
+    "print(Mi)\n",
+    "\n",
+    "timer.start()\n",
+    "for i in range(100000):\n",
+    "    ciclo2 = cicloH(Mi)\n",
+    "timer.stop()\n",
+    "time = timer.get_time(reference = \"total\", unit = \"seconds\") - timestamps[-1]\n",
+    "timer.lap(start_stopped = \"false\")\n",
+    "timestamps = timestamps + [time]\n",
+    "print(\"\\nTempo: \" + str(time))\n",
+    "print(\"\\nCiclo Hamilton: \" + str(ciclo2))\n",
+    "\n",
+    "Mf = np.array([[0,1,1],[1,0,1],[1,1,0]])\n",
+    "print(\"\\nTerceiro Exemplo:\\n\")\n",
+    "print(Mf)\n",
+    "\n",
+    "timer.start()\n",
+    "for i in range(100000):\n",
+    "    ciclo3 = cicloH(Mf)\n",
+    "timer.stop()\n",
+    "time = timer.get_time(reference = \"total\", unit = \"seconds\") - timestamps[-1]\n",
+    "timer.lap(start_stopped = \"false\")\n",
+    "timestamps = timestamps + [time]\n",
+    "print(\"\\nTempo: \" + str(time))\n",
+    "print(\"\\nCiclo Hamilton: \" + str(ciclo3))\n",
+    "\n",
+    "Mp = np.array([[0,1,1,1]\n",
+    "              ,[1,0,1,0]\n",
+    "              ,[1,1,0,1]\n",
+    "              ,[1,0,1,0]])\n",
+    "print(\"\\nQuarto Exemplo:\\n\")\n",
+    "print(Mp)\n",
+    "\n",
+    "timer.start()\n",
+    "for i in range(100000):\n",
+    "    ciclo4 = cicloH(Mp)\n",
+    "timer.stop()\n",
+    "time = timer.get_time(reference = \"total\", unit = \"seconds\") - timestamps[-1]\n",
+    "timer.lap(start_stopped = \"false\")\n",
+    "timestamps = timestamps + [time]\n",
+    "print(\"\\nTempo: \" + str(time))\n",
+    "print(\"\\nCiclo Hamilton: \" + str(ciclo4))\n",
+    "\n",
+    "print(\"\\nTempos: \" + str(timestamps))\n",
     "\n"
    ]
   },
@@ -919,7 +972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
