--- a/Segundo Trabalho/src/[INF1631] Segundo Trabalho - Estruturas Discretas.ipynb
+++ b/Segundo Trabalho/src/[INF1631] Segundo Trabalho - Estruturas Discretas.ipynb
@@ -23,137 +23,71 @@
    "source": [
     "## Primeira Questão (Teorema 1)\n",
     "\n",
-    "> Dado um teorema do tipo: Sabe-se determinar o prêmio máximo que o rei consegue coletar saindo da posição (i, j) e consumindo q unidades; deseja-se encontrar o algoritmo correspondnete ao mesmo para que o rei consiga obter o maior número possível de prêmios e testar o algoritmo com a estrutura proposta no enunciado! Encontra-se no arquivo walk.in\n",
+    "> Dado um teorema do tipo: Sabe-se encontrar a árvore de peso máximo de G=(V,E) que contém o vértice 1 e possui K vértices; deseja-se encontrar o algoritmo correspondente que prove o teorema e teste o algoritmo em instâncias pequenas dos arquivos de dados fornecidos.\n",
     "\n",
     "### (I) Implementação Python com Testes:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"map\") to list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-3bd33c4ed58e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     77\u001b[0m         \u001b[0mq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0mq\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m             \u001b[0mcosts\u001b[0m   \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m             \u001b[0mrewards\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"map\") to list"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "def kingteorem(costs, rewards, energy):\n",
-    "    # Salvaguarda\n",
-    "    if energy < 0:\n",
-    "        raise ValueError(\"Invalid energy!!\")\n",
+    "## Primeira Questão (Teorema 1 - BÔNUS)\n",
     "\n",
-    "    # Dict cujas chaves sao tuplas (posicao, energia) e cujos valores\n",
-    "    # sao tuplas contendo o premio maximo que o rei consegue coletar\n",
-    "    # comecando da posicao dada, com dada energia disponivel, e parando na \n",
-    "    # posicao 0 com 0 energia, e o caminho para tal\n",
-    "    memo = {}\n",
+    "> Repita os itens anteriores para o teorema do tipo: Sabe-se encontrar a floresta de peso mínimo de G = (V, E) onde os componentes conexos possuem pelo menos K vértices.\n",
     "\n",
-    "    # Caso base -- q=0\n",
-    "    memo[(0, 0)] = (0, [0])\n",
-    "    for v in range(1, 64):\n",
-    "        memo[(v, 0)] = None\n",
+    "### (I) Implementação Python com Testes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Segunda Questão (Teorema 2)\n",
     "\n",
-    "    # Hipotese indutiva e passo indutivo -- preencher a tabela\n",
-    "    # Para cada coluna de energia\n",
-    "    for q in range(1, energy+1):\n",
-    "        # Para cada vertice nessa coluna\n",
-    "        for v in range(64):\n",
-    "            # custo_vizinho e a coluna em que vamos olhar\n",
-    "            custo_vizinho = q - costs[v]\n",
-    "            vizinhos = find_neighbors(v)\n",
-    "            if custo_vizinho < 0:\n",
-    "                memo[(v, q)] = None\n",
-    "            else:\n",
-    "                # Filtra as celulas -- somente se nao for impossivel (not None)\n",
-    "                # e pega a tupla (premio, caminho) delas\n",
-    "                tuplas = [memo[(vizinho, custo_vizinho)] for vizinho in vizinhos if not memo[(vizinho, custo_vizinho)] == None]\n",
-    "                if len(tuplas) > 0:\n",
-    "                    # O melhor_vizinho e o que tem maior premio\n",
-    "                    melhor_vizinho = max(tuplas, key=lambda x: x[0])\n",
-    "                    # O novo_premio e o premio do melhor vizinho somado ao do vertice em questao\n",
-    "                    novo_premio = melhor_vizinho[0] + rewards[v]\n",
-    "                    # O novo_caminho e o caminho do melhor vizinho acrescido do vertice em questao\n",
-    "                    novo_caminho = melhor_vizinho[1][:] + [v]\n",
-    "                    memo[(v, q)] = (novo_premio, novo_caminho)\n",
-    "                else:\n",
-    "                    memo[(v, q)] = None\n",
+    "> Dado um teorema do tipo: Sabe-se determinar o prêmio máximo que o rei consegue coletar estando na posição (i,j) com q unidades restantes para consumir; apresente um algoritmo para determinar o caminho que o rei deve fazer para obter o maior total possível em prêmios e teste para um arquivo de dados com a estrutura apresentada.\n",
     "\n",
-    "    # Com a tabela em maos, vamos encontrar o caminho comecando em 0\n",
-    "    # que obtenha o maior premio possivel, utilizando qualquer quantidade\n",
-    "    # de energia menor que a fornecida\n",
-    "    maior = 0\n",
-    "    for q in range(energy, -1, -1):\n",
-    "        x = memo[(0, q)]\n",
-    "        if x != None and x[0] > maior:\n",
-    "            maior = x[0]\n",
-    "            inst = x + (q,)\n",
-    "    return inst\n",
+    "### (I) Implementação Python com Testes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Terceira Questão (Teorema 3)\n",
     "\n",
+    "> Considere um text definido pelo vetor de caracteres T[1..n]. Deseja-se determinar todas as ocorrências do string s[1..m] em T. Desenvolva algoritmos com este objetivo que atendam as condições determinadas...\n",
     "\n",
-    "def find_neighbors(pos):\n",
-    "    x = pos/8\n",
-    "    y = pos%8\n",
-    "\n",
-    "    naive = [(x-1, y-1), (x-1, y), (x-1, y+1),\n",
-    "             (x,   y-1),           (x,   y+1),\n",
-    "             (x+1, y-1), (x+1, y), (x+1, y+1)]\n",
-    "    filtered = [n for n in naive if n[0]>=0 and n[1]>=0 and n[0]<8 and n[1]<8]\n",
-    "\n",
-    "    return map(lambda pos: pos[0]*8+pos[1], filtered)\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "\n",
-    "    EXECS_PER_LOOP = 100\n",
-    "    TIME_THRESHOLD = 5\n",
-    "\n",
-    "    # Ler o arquivo de entrada\n",
-    "    problems = []\n",
-    "    with open('walk.in') as f:\n",
-    "\n",
-    "        # Ler o \n",
-    "        q = int(f.readline().strip())\n",
-    "        while q != 0:\n",
-    "            costs   = sum([map(int, f.readline().strip().split(' ')) for i in range(8)], [])\n",
-    "            rewards = sum([map(int, f.readline().strip().split(' ')) for i in range(8)], [])\n",
-    "\n",
-    "            problems.append({'energy': q, 'costs': costs, 'rewards': rewards})\n",
-    "\n",
-    "            # Next\n",
-    "            q = int(f.readline().strip())\n",
-    "\n",
-    "    # USED TO MEASURE TIME\n",
-    "    for n, problem in enumerate(problems):\n",
-    "    # Executa EXECS_PER_LOOP vezes a cada vez, ate passar de TIME_THRESHOLD segundos\n",
-    "        start = time()\n",
-    "        execs = 0\n",
-    "        while time() - start < TIME_THRESHOLD:\n",
-    "            execs += EXECS_PER_LOOP\n",
-    "            for i in range(EXECS_PER_LOOP):\n",
-    "                solution = kingteorem(problem['costs'], problem['rewards'], problem['energy'])\n",
-    "        end = time()\n",
-    "        elapsed = end - start\n",
-    "        print(\"num = %d\" % n)\n",
-    "        print(\"time/exec = %.6f ms\" % (1000*elapsed/execs))\n",
-    "        print\n",
-    "\n",
-    "    for problem in problems:\n",
-    "        solution = kingteorem(problem['costs'], problem['rewards'], problem['energy'])\n",
-    "        print (solution[0])\n",
-    "        print (solution[2])\n",
-    "        print (q)\n",
-    "        print (' '.join(str(x) for x in solution[1]))\n"
+    "### (I) Implementação Python com Testes:"
    ]
   },
   {
