--- a/Segundo Trabalho/src/[INF1631] Segundo Trabalho - Estruturas Discretas.ipynb
+++ b/Segundo Trabalho/src/[INF1631] Segundo Trabalho - Estruturas Discretas.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -215,6 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[[1, 2]]\n",
       "[[1, 2], [5, 6], [7, 8]]\n"
      ]
     }
@@ -256,8 +257,44 @@
     "        if(maiuscula(string[i])):\n",
     "            string[i] = chr(ord(string[i]) + 32)\n",
     "    return string\n",
-    "            \n",
+    "\n",
     "def FindWord (text, word):\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    f = len(text)\n",
+    "    n = len(word)\n",
+    "    letra = text[i]\n",
+    "    instances = []\n",
+    "    start = 0\n",
+    "    end = 0\n",
+    "    in_string = 0\n",
+    "    while(i<f):\n",
+    "        if(letra == word[0] and in_string == 0):\n",
+    "            j = 0\n",
+    "            start = i\n",
+    "            end = i\n",
+    "            in_string = 1\n",
+    "        if(in_string == 1 and letra != word[j]):\n",
+    "            in_string = 0\n",
+    "            start = 0\n",
+    "            end = 0\n",
+    "            j = 0            \n",
+    "        if(in_string == 1 and letra == word[j] and j != (n-1)):\n",
+    "            j = j + 1\n",
+    "            end = end + 1   \n",
+    "        if(in_string == 1 and letra == word[j] and j == (n-1)):\n",
+    "            instances = instances + [[start,end]]\n",
+    "            start = 0\n",
+    "            end = 0\n",
+    "            in_string = 0\n",
+    "        if(i == (f-1)):\n",
+    "            break\n",
+    "        i = i + 1\n",
+    "        letra = text[i]\n",
+    "    return instances\n",
+    "    \n",
+    "    \n",
+    "def FindWordEq (text, word):\n",
     "    text = Transform(text)\n",
     "    word = Transform(word)\n",
     "    i = 0\n",
@@ -294,10 +331,12 @@
     "        letra = text[i]\n",
     "    return instances\n",
     "\n",
-    "text = ['a','B','c','d','e','b','c','b','c','e','f']\n",
+    "text = ['a','B','c','d','e','b','c','b','c','e','c']\n",
     "word = ['B','c']\n",
     "\n",
     "instances = FindWord(text,word)\n",
+    "print(instances)\n",
+    "instances = FindWordEq(text,word)\n",
     "print(instances)"
    ]
   }
